Added basic command-line UI

--- a/Sitecore.Courier/Sitecore.Courier.csproj
+++ b/Sitecore.Courier/Sitecore.Courier.csproj
@@ -54,6 +54,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>lib\Sitecore.Update.dll</HintPath>
     </Reference>
+    <Reference Include="Sitecore.Zip">
+      <HintPath>lib\Sitecore.Zip.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
