Updated to Framework 4.5, added libraries.

--- a/Sitecore.Courier.Runner/App.config
+++ b/Sitecore.Courier.Runner/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
   <configSections>
     <section name="sitecorediff" type="Sitecore.Update.Configuration.ConfigReader, Sitecore.Update"/>
@@ -34,4 +34,4 @@
       <param>target</param>
     </target>
   </sitecorediff>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
