--- a/Sitecore.Courier.Runner/App.config
+++ b/Sitecore.Courier.Runner/App.config
@@ -18,7 +18,7 @@
       </filter>
     </commandfilters>
     <dataproviders>
-      <dataprovider id="filesystemmain" type="Sitecore.Update.Data.Providers.FileSystemProvider, Sitecore.Update">
+      <dataprovider id="filesystemmain" type="Sitecore.Courier.FileSystemProvider, Sitecore.Courier">
         <param>$(id)</param>
       </dataprovider>
       <dataprovider id="snapshotprovider" type="Sitecore.Update.Data.Providers.SnapShotProvider, Sitecore.Update">
@@ -28,10 +28,16 @@
 
     <source type="Sitecore.Update.Data.DataManager, Sitecore.Update">
       <param>source</param>
+      <path/>
+      <serializationPath/>
+      <dataprovider id="FileSystemMain"/>
     </source>
 
     <target type="Sitecore.Update.Data.DataManager, Sitecore.Update">
       <param>target</param>
+      <path/>
+      <serializationPath/>
+      <dataprovider id="FileSystemMain"/>
     </target>
   </sitecorediff>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
