--- a/Sitecore.Courier.Runner/App.config
+++ b/Sitecore.Courier.Runner/App.config
@@ -15,6 +15,7 @@
         </fields>
       </filter>
       <filter id="fileCommandFilter" mode="on" type="Sitecore.Courier.FileCommandsFilter, Sitecore.Courier">
+        <forceoverwrites>true</forceoverwrites>
       </filter>
     </commandfilters>
     <dataproviders>
