Fixed env. variable to make it compatible with TeamCity

--- a/Sitecore.Courier.Runner/Sitecore.Courier.Runner.csproj
+++ b/Sitecore.Courier.Runner/Sitecore.Courier.Runner.csproj
@@ -90,8 +90,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>call "$(DevEnvDir)..\..\vc\vcvarsall.bat" x86
-"$(DevEnvDir)..\..\vc\bin\EditBin.exe" "$(TargetPath)"  /LARGEADDRESSAWARE</PostBuildEvent>
+    <PostBuildEvent>call "$(VS110COMNTOOLS)..\..\vc\vcvarsall.bat" x86
+"$(VS110COMNTOOLS)..\..\vc\bin\EditBin.exe" "$(TargetPath)"  /LARGEADDRESSAWARE</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
