--- a/Sitecore.Courier.Runner/Sitecore.Courier.Runner.csproj
+++ b/Sitecore.Courier.Runner/Sitecore.Courier.Runner.csproj
@@ -70,9 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandLineOptions.cs" />
-    <Compile Include="ExclusionProcessor.cs" />
-    <Compile Include="ExclusionReader.cs" />
-    <Compile Include="ExclusionValidator.cs" />
+    <Compile Include="ExclusionHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
