Oops, that doesn't work yet

--- a/Sitecore.Courier.Runner/App.config
+++ b/Sitecore.Courier.Runner/App.config
@@ -2,14 +2,14 @@
 <configuration>
   <configSections>
     <section name="sitecorediff" type="Sitecore.Update.Configuration.ConfigReader, Sitecore.Update"/>
-    <section name="rainbow" />
+    <!--<section name="rainbow" />-->
   </configSections>
-  <rainbow>
+  <!--<rainbow>
     <serializationFormatter type="Rainbow.Storage.Yaml.YamlSerializationFormatter, Rainbow.Storage.Yaml" singleInstance="true">
       <fieldFormatter type="Rainbow.Formatting.FieldFormatters.MultilistFormatter, Rainbow" />
       <fieldFormatter type="Rainbow.Formatting.FieldFormatters.XmlFieldFormatter, Rainbow" />
     </serializationFormatter>
-  </rainbow>
+  </rainbow>-->
   <sitecorediff>
     <commandfilters>
       <filter id="changedFieldsFilter" mode="on" type="Sitecore.Update.Commands.Filters.ChangedFieldsFilter, Sitecore.Update">
