--- a/Sitecore.Courier.ShellExtensions/Sitecore.Courier.ShellExtensions.csproj
+++ b/Sitecore.Courier.ShellExtensions/Sitecore.Courier.ShellExtensions.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Sitecore.Courier.ShellExtensions</RootNamespace>
     <AssemblyName>Sitecore.Courier.ShellExtensions</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
