--- a/Sitecore.Courier/packages.config
+++ b/Sitecore.Courier/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Rainbow.Core" version="1.3.1" targetFramework="net45" />
-  <package id="Rainbow.Storage.Yaml" version="1.3.1" targetFramework="net45" />
+  <package id="Kamsar.WebConsole" version="1.2.2.0" targetFramework="net452" />
+  <package id="MicroCHAP" version="1.2.2.2" targetFramework="net452" />
+  <package id="Rainbow" version="1.4.1" targetFramework="net452" />
+  <package id="Rainbow.Core" version="1.4.2" targetFramework="net452" />
+  <package id="Rainbow.Storage.Sc" version="1.4.1" targetFramework="net452" />
+  <package id="Rainbow.Storage.Yaml" version="1.4.2" targetFramework="net452" />
+  <package id="Unicorn" version="3.3.2" targetFramework="net452" />
+  <package id="Unicorn.Core" version="3.3.2" targetFramework="net452" />
 </packages>
