--- a/Sitecore.Courier.Runnier.ExclusionsTests/packages.config
+++ b/Sitecore.Courier.Runnier.ExclusionsTests/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.2.1" targetFramework="net452" />
   <package id="CommandLineParser" version="1.9.71" targetFramework="net451" />
+  <package id="Moq" version="4.8.2" targetFramework="net452" />
   <package id="NUnit" version="3.7.1" targetFramework="net452" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
 </packages>
