--- a/Sitecore.Courier.Runner/App.config
+++ b/Sitecore.Courier.Runner/App.config
@@ -12,6 +12,9 @@
     </serializationFormatter>
   </rainbow>
   <sitecorediff>
+    <settings>
+      <setting name="Serialization.SerializationType" value="YAML" />
+    </settings>
     <commandfilters>
       <filter id="changedFieldsFilter" mode="on" type="Sitecore.Update.Commands.Filters.ChangedFieldsFilter, Sitecore.Update">
         <fields hint="list">
@@ -51,4 +54,4 @@
       <dataprovider id="FileSystemMain"/>
     </target>
   </sitecorediff>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1"/></startup></configuration>
