--- a/Sitecore.Courier.Runner/packages.config
+++ b/Sitecore.Courier.Runner/packages.config
@@ -1,4 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net45" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net471" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net471" />
+  <package id="Sitecore.Kernel" version="9.2.0" targetFramework="net472" />
+  <package id="Sitecore.Logging" version="9.2.0" targetFramework="net471" />
+  <package id="Sitecore.Update" version="9.2.0" targetFramework="net472" />
+  <package id="Sitecore.Zip" version="9.2.0" targetFramework="net471" />
 </packages>
