--- a/Sitecore.Courier.Runnier.ExclusionsTests/packages.config
+++ b/Sitecore.Courier.Runnier.ExclusionsTests/packages.config
@@ -6,5 +6,5 @@
   <package id="NUnit" version="3.10.1" targetFramework="net452" />
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net452" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net452" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" requireReinstallation="true" />
 </packages>
