--- a/Sitecore.Courier/App.config
+++ b/Sitecore.Courier/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
   <configSections>
     <section name="sitecorediff" type="Sitecore.Update.Configuration.ConfigReader, Sitecore.Update"/>
@@ -52,6 +52,6 @@
     </target>
   </sitecorediff>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1"/>
   </startup>
 </configuration>
