--- a/Sitecore.Courier/packages.config
+++ b/Sitecore.Courier/packages.config
@@ -1,11 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Kamsar.WebConsole" version="1.2.2.0" targetFramework="net452" />
+  <package id="Configy" version="1.0.0" targetFramework="net452" />
+  <package id="Kamsar.WebConsole" version="2.0.1" targetFramework="net452" />
   <package id="MicroCHAP" version="1.2.2.2" targetFramework="net452" />
-  <package id="Rainbow" version="1.4.1" targetFramework="net452" />
-  <package id="Rainbow.Core" version="1.4.2" targetFramework="net452" />
-  <package id="Rainbow.Storage.Sc" version="1.4.1" targetFramework="net452" />
-  <package id="Rainbow.Storage.Yaml" version="1.4.2" targetFramework="net452" />
-  <package id="Unicorn" version="3.3.2" targetFramework="net452" />
-  <package id="Unicorn.Core" version="3.3.2" targetFramework="net452" />
+  <package id="Rainbow" version="2.1.1" targetFramework="net452" />
+  <package id="Rainbow.Core" version="2.1.1" targetFramework="net452" />
+  <package id="Rainbow.Storage.Sc" version="2.1.1" targetFramework="net452" />
+  <package id="Rainbow.Storage.Yaml" version="2.1.1" targetFramework="net452" />
+  <package id="Sitecore.Kernel" version="9.2.0" targetFramework="net472" />
+  <package id="Sitecore.Update" version="9.2.0" targetFramework="net472" />
+  <package id="Sitecore.Zip" version="9.2.0" targetFramework="net471" />
+  <package id="Unicorn" version="4.1.1" targetFramework="net452" />
+  <package id="Unicorn.Core" version="4.1.1" targetFramework="net452" />
+  <package id="Unicorn.Roles" version="4.1.1" targetFramework="net452" />
+  <package id="Unicorn.Roles.Core" version="4.1.1" targetFramework="net452" />
+  <package id="Unicorn.Users" version="4.1.1" targetFramework="net452" />
+  <package id="Unicorn.Users.Core" version="4.1.1" targetFramework="net452" />
 </packages>
