--- a/Sitecore.Courier/Sitecore.Courier.csproj
+++ b/Sitecore.Courier/Sitecore.Courier.csproj
@@ -138,7 +138,10 @@
     <Compile Include="FileSystemProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuickContentDataItem.cs" />
+    <Compile Include="Rainbow\PostStepFileSystemDataItem.cs" />
+    <Compile Include="Rainbow\RoleFileSystemDataItem.cs" />
     <Compile Include="SerializationProvider.cs" />
+    <Compile Include="Rainbow\UserFileSystemDataItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
