--- a/Sitecore.Courier.Runnier.ExclusionsTests/packages.config
+++ b/Sitecore.Courier.Runnier.ExclusionsTests/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Castle.Core" version="4.2.1" targetFramework="net452" />
   <package id="CommandLineParser" version="1.9.71" targetFramework="net451" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net471" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net471" />
   <package id="Moq" version="4.8.2" targetFramework="net452" />
   <package id="NUnit" version="3.10.1" targetFramework="net452" />
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net452" />
