Added PS Gallery files, refactoring

--- a/Sitecore.Courier/packages.config
+++ b/Sitecore.Courier/packages.config
@@ -10,6 +10,7 @@
   <package id="Rainbow.Storage.Sc" version="2.1.1" targetFramework="net452" />
   <package id="Rainbow.Storage.Yaml" version="2.1.1" targetFramework="net452" />
   <package id="Sitecore.Kernel" version="9.2.0" targetFramework="net472" />
+  <package id="Sitecore.Logging" version="9.2.0" targetFramework="net471" />
   <package id="Sitecore.Update" version="9.2.0" targetFramework="net472" />
   <package id="Sitecore.Zip" version="9.2.0" targetFramework="net471" />
   <package id="Unicorn" version="4.1.1" targetFramework="net452" />
