--- a/Sitecore.Courier/App.config
+++ b/Sitecore.Courier/App.config
@@ -12,6 +12,18 @@
     </serializationFormatter>
   </rainbow>
   <sitecorediff>
+    <settings>
+      <setting name="Serialization.SerializationType" value="YAML" />
+    </settings>
+    <fieldFormatters>
+      <!--
+            NOTE: These setting are only required when the 'Serialization.SerializationType' setting is set to YAML.
+            These settings define how specific item field types are serialized to the file system.
+            -->
+      <fieldFormatter type="Sitecore.Data.Serialization.Yaml.Formatting.XmlFieldFormatter, Sitecore.Kernel" />
+      <fieldFormatter type="Sitecore.Data.Serialization.Yaml.Formatting.MultilistFormatter, Sitecore.Kernel" />
+      <fieldFormatter type="Sitecore.Data.Serialization.Yaml.Formatting.CheckboxFieldFormatter, Sitecore.Kernel" />
+    </fieldFormatters>
     <commandfilters>
       <filter id="changedFieldsFilter" mode="on" type="Sitecore.Update.Commands.Filters.ChangedFieldsFilter, Sitecore.Update">
         <fields hint="list">
