--- a/Sitecore.Courier.Cmdlets/packages.config
+++ b/Sitecore.Courier.Cmdlets/packages.config
@@ -3,11 +3,14 @@
   <package id="Configy" version="1.0.0" targetFramework="net471" />
   <package id="Kamsar.WebConsole" version="2.0.1" targetFramework="net471" />
   <package id="MicroCHAP" version="1.2.2.2" targetFramework="net471" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net471" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net471" />
   <package id="Rainbow" version="2.1.1" targetFramework="net471" />
   <package id="Rainbow.Core" version="2.1.1" targetFramework="net471" />
   <package id="Rainbow.Storage.Sc" version="2.1.1" targetFramework="net471" />
   <package id="Rainbow.Storage.Yaml" version="2.1.1" targetFramework="net471" />
   <package id="Sitecore.Kernel" version="9.2.0" targetFramework="net471" />
+  <package id="Sitecore.Logging" version="9.2.0" targetFramework="net471" />
   <package id="Sitecore.Update" version="9.2.0" targetFramework="net471" />
   <package id="Unicorn" version="4.1.1" targetFramework="net471" />
   <package id="Unicorn.Core" version="4.1.1" targetFramework="net471" />
