--- a/Sitecore.Courier.Cmdlets/packages.config
+++ b/Sitecore.Courier.Cmdlets/packages.config
@@ -12,6 +12,7 @@
   <package id="Sitecore.Kernel" version="9.2.0" targetFramework="net471" />
   <package id="Sitecore.Logging" version="9.2.0" targetFramework="net471" />
   <package id="Sitecore.Update" version="9.2.0" targetFramework="net471" />
+  <package id="Sitecore.Zip" version="9.2.0" targetFramework="net471" />
   <package id="Unicorn" version="4.1.1" targetFramework="net471" />
   <package id="Unicorn.Core" version="4.1.1" targetFramework="net471" />
   <package id="Unicorn.Roles" version="4.1.1" targetFramework="net471" />
